@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/listitem_selected" android:state_activated="true" />
-    <item android:drawable="@color/listitem_selected" android:state_checked="true" />
-    <item android:drawable="@color/listitem_selected" android:state_pressed="true" />
+    <item android:drawable="@color/listitem_selected" android:state_activated="true"/>
     <item android:drawable="@color/listitem_selected" android:state_selected="true" />
     <item android:drawable="@android:color/transparent" />
 </selector>
