@@ -57,7 +57,7 @@
                 android:id="@+id/address_book"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/folder_activated_background">
+                android:background="@drawable/listitem_background">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -85,7 +85,7 @@
                 android:id="@+id/network_status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/folder_activated_background">
+                android:background="@drawable/listitem_background">
 
                 <ImageView
                     android:id="@+id/network_status_icon"
