@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/listitem_height_three_lines"
-    android:background="@drawable/listitem_checked">
+    android:background="@drawable/listitem_background">
 
     <ImageView
         android:id="@+id/contact_picture"
