@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/folder_activated_background">
+    android:background="@drawable/listitem_background">
 
     <ImageView
         android:id="@+id/folder_icon"
