@@ -12,6 +12,7 @@ And don't add newlines before or after p tags because of transifex -->
 <li>Email content can be seleted/copied (API 11+)</li>
 <li>Cc: and Bcc: fields</li>
 <li>Improved performance of email and contact lists</li>
+<li>Use ripple effect on API 21+</li>
 <li>Much better support for legacy devices</li>
 <li>Help and About screens</li>
 <li>UI improvements, bug fixes, translation updates</li>
