@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <item name="listitem_background" type="drawable">@drawable/listitem_background_selector</item>
+</resources>
